add problem 0007 Remove Element (#27)

--- a/Problem-0003-Roman-to-Integer/problem-0003.html
+++ b/Problem-0003-Roman-to-Integer/problem-0003.html
@@ -6,14 +6,14 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <title>Problem 0003 Roman to Integer</title>
-    <meta name='description' content='Problem 0003 Roman to Integer'>
+    <title>Problem 0003 Roman to Integer (#13)</title>
+    <meta name='description' content='Problem 0003 Roman to Integer (#13)'>
     <meta name='author' content='me'>
 
-    <meta property='og:title' content='Problem 0003 Roman to Integer'>
+    <meta property='og:title' content='Problem 0003 Roman to Integer (#13)'>
     <meta property='og:type' content='website'>
     <meta property='og:url' content='https://.com/'>
-    <meta property='og:description' content='Problem 0003 Roman to Integer'>
+    <meta property='og:description' content='Problem 0003 Roman to Integer (#13)'>
     <meta property='og:image' content='image.png'>
 
     <link rel='icon' href='/favicon.ico'>
