--- a/Problem-0007-Remove-Element/problem-0007.html
+++ b/Problem-0007-Remove-Element/problem-0007.html
@@ -6,25 +6,25 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <title>Problem 0002 Palindrome Number (#9)</title>
-    <meta name='description' content='Problem 0002 Palindrome Number (#9)'>
+    <title>Problem 0007 Remove Element (#27)</title>
+    <meta name='description' content='Problem 0007 Remove Element (#27)'>
     <meta name='author' content='me'>
 
-    <meta property='og:title' content='Problem 0002 Palindrome Number (#9)'>
+    <meta property='og:title' content='Problem 0007 Remove Element (#27)'>
     <meta property='og:type' content='website'>
     <meta property='og:url' content='https://.com/'>
-    <meta property='og:description' content='Problem 0002 Palindrome Number (#9)'>
+    <meta property='og:description' content='Problem 0007 Remove Element (#27)'>
     <meta property='og:image' content='image.png'>
 
     <link rel='icon' href='/favicon.ico'>
     <link rel='icon' href='/favicon.svg' type='image/svg+xml'>
     <link rel='apple-touch-icon' href='/apple-touch-icon.png'>
 
-    <link rel='stylesheet' href='css/problem-0002.css'>
+    <link rel='stylesheet' href='css/problem-0007.css'>
 </head>
 
 <body>
-    <script src='js/problem-0002.js'></script>
+    <script src='js/problem-0007.js'></script>
 </body>
 
 </html>
