--- a/Problem-0001-Two-Sum/problem-0001.html
+++ b/Problem-0001-Two-Sum/problem-0001.html
@@ -6,14 +6,14 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <title>Problem 0001 Two Sum</title>
-    <meta name='description' content='Problem 0001 Two Sum'>
+    <title>Problem 0001 Two Sum (#1)</title>
+    <meta name='description' content='Problem 0001 Two Sum (#1)'>
     <meta name='author' content='me'>
 
-    <meta property='og:title' content='Problem 0001 Two Sum'>
+    <meta property='og:title' content='Problem 0001 Two Sum (#1)'>
     <meta property='og:type' content='website'>
     <meta property='og:url' content='https://.com/'>
-    <meta property='og:description' content='Problem 0001 Two Sum'>
+    <meta property='og:description' content='Problem 0001 Two Sum (#1)'>
     <meta property='og:image' content='image.png'>
 
     <link rel='icon' href='/favicon.ico'>
